oops, fix the viewer list alignment fix

--- a/resources/assets/css/components/hud.less
+++ b/resources/assets/css/components/hud.less
@@ -140,12 +140,12 @@
       });
     }
   }
-  &.atleast2 {
-    .viewer-avatar {
-      width: @tile_viewers_height;
-      min-width: @tile_viewers_height;
-      padding: 0;
-    }
+}
+.viewers-multiple {
+  .viewer-avatar {
+    width: @tile_viewers_height;
+    min-width: @tile_viewers_height;
+    padding: 0;
   }
 }
 .hud-viewers {
